# tectonic-config

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  glide.yaml
config/: BUILD.bazel  config.go  config_test.go
config/kube-addon/: BUILD.bazel  config.go
config/kube-core/: config.go
config/tectonic-ingress/: BUILD.bazel  config.go
config/tectonic-node-controller/: config.go
config/tectonic-utility/: BUILD.bazel  config.go
config/testdata/: kco-config.yaml
tools/: update-build.sh  update-vendor.sh
